--- a/ch4-project/MyMovies/MyMovies/Info.plist
+++ b/ch4-project/MyMovies/MyMovies/Info.plist
@@ -2,6 +2,17 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>I need access to your location</string>
+	<key>NSCameraUsageDescription</key>
+	<string>I need to access the camera</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>I need to access your photo library</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
